// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`PromptsList rendering tests PromptsList - filters not displayed - rendered test 1`] = `
<div>
  <div
    class="flex h-full flex-col bg-white"
    data-testid="prompts-list"
  >
    <div
      class="sticky top-0 z-10 flex items-center justify-between border-b border-slate-200/80 bg-gradient-to-r from-white to-slate-50/50 px-3 py-2 backdrop-blur-sm"
      data-testid="prompts-list-header"
    >
      <button
        class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-xs hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 h-8 rounded-md gap-1.5 px-3 has-[>svg]:px-2.5 relative transition-all duration-200 hover:bg-slate-50"
        data-slot="button"
        data-testid="filters-btn"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-funnel mr-2 h-4 w-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10 20a1 1 0 0 0 .553.895l2 1A1 1 0 0 0 14 21v-7a2 2 0 0 1 .517-1.341L21.74 4.67A1 1 0 0 0 21 3H3a1 1 0 0 0-.742 1.67l7.225 7.989A2 2 0 0 1 10 14z"
          />
        </svg>
        <span
          class="text-sm font-medium"
        >
          Filter
        </span>
      </button>
      <a
        class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive hover:bg-primary/90 h-8 rounded-md gap-1.5 px-3 has-[>svg]:px-2.5 bg-gradient-to-r from-blue-600 to-blue-700 text-white shadow-md transition-all duration-200 hover:from-blue-700 hover:to-blue-800 hover:shadow-lg flex items-center gap-2"
        data-slot="button"
        data-testid="create-prompt-btn"
        href="/prompts/new"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-plus h-4 w-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5 12h14"
          />
          <path
            d="M12 5v14"
          />
        </svg>
        <span
          class="text-sm font-medium"
        >
          Neu
        </span>
      </a>
    </div>
    <div
      class="flex-1 overflow-y-auto bg-slate-50/30 px-1 pt-1"
      data-testid="prompts-list-items"
    >
      <div
        class="flex flex-col space-y-1"
      >
        <a
          data-testid="mock-link"
          href="/prompts/334db648-f300-4284-8149-075ff465d750"
        >
          <div
            class="group relative rounded-lg cursor-pointer transition-all duration-200 border bg-white border-slate-200/60 hover:border-slate-300 hover:shadow-md"
            data-testid="prompt-list-item"
          >
            <div
              class="flex items-start gap-3 px-4 py-3.5"
            >
              <div
                class="flex-1 min-w-0"
              >
                <div
                  class="flex items-center gap-2 mb-2"
                >
                  <h3
                    class="font-semibold text-sm text-slate-900 truncate flex-1 group-hover:text-blue-700 transition-colors"
                  >
                    title 0
                  </h3>
                  <div
                    data-testid="is-favorite"
                  >
                    <svg
                      aria-hidden="true"
                      class="lucide lucide-star w-4 h-4 transition-all fill-yellow-400 text-yellow-500 scale-110"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M11.525 2.295a.53.53 0 0 1 .95 0l2.31 4.679a2.123 2.123 0 0 0 1.595 1.16l5.166.756a.53.53 0 0 1 .294.904l-3.736 3.638a2.123 2.123 0 0 0-.611 1.878l.882 5.14a.53.53 0 0 1-.771.56l-4.618-2.428a2.122 2.122 0 0 0-1.973 0L6.396 21.01a.53.53 0 0 1-.77-.56l.881-5.139a2.122 2.122 0 0 0-.611-1.879L2.16 9.795a.53.53 0 0 1 .294-.906l5.165-.755a2.122 2.122 0 0 0 1.597-1.16z"
                      />
                    </svg>
                  </div>
                </div>
                <div
                  class="flex flex-wrap gap-1.5 mb-2.5"
                  data-testid="categories"
                >
                  <span
                    class="text-xs px-2 py-0.5 bg-gradient-to-r from-slate-100 to-slate-50 text-slate-700 rounded-md font-medium border border-slate-200/50"
                  >
                    category 0
                  </span>
                  <span
                    class="text-xs px-2 py-0.5 bg-gradient-to-r from-slate-100 to-slate-50 text-slate-700 rounded-md font-medium border border-slate-200/50"
                  >
                    category 1
                  </span>
                  <span
                    class="text-xs px-2 py-0.5 text-slate-500 font-medium"
                  >
                    +
                    1
                     mehr
                  </span>
                </div>
                <div
                  class="flex justify-end items-center gap-2.5 text-xs text-slate-500"
                >
                  <span
                    class="inline-flex items-center gap-1.5 truncate"
                  >
                    <svg
                      aria-hidden="true"
                      class="lucide lucide-clock w-3.5 h-3.5 flex-shrink-0 text-slate-400"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M12 6v6l4 2"
                      />
                      <circle
                        cx="12"
                        cy="12"
                        r="10"
                      />
                    </svg>
                    <span
                      class="font-medium"
                    >
                      Sa., 27. Sept. 2025
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </a>
        <a
          data-testid="mock-link"
          href="/prompts/334db648-f300-4284-8149-075ff465d751"
        >
          <div
            class="group relative rounded-lg cursor-pointer transition-all duration-200 border bg-white border-slate-200/60 hover:border-slate-300 hover:shadow-md"
            data-testid="prompt-list-item"
          >
            <div
              class="flex items-start gap-3 px-4 py-3.5"
            >
              <div
                class="flex-1 min-w-0"
              >
                <div
                  class="flex items-center gap-2 mb-2"
                >
                  <h3
                    class="font-semibold text-sm text-slate-900 truncate flex-1 group-hover:text-blue-700 transition-colors"
                  >
                    title 1
                  </h3>
                  <div
                    data-testid="is-favorite"
                  >
                    <svg
                      aria-hidden="true"
                      class="lucide lucide-star w-4 h-4 transition-all fill-yellow-400 text-yellow-500 scale-110"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M11.525 2.295a.53.53 0 0 1 .95 0l2.31 4.679a2.123 2.123 0 0 0 1.595 1.16l5.166.756a.53.53 0 0 1 .294.904l-3.736 3.638a2.123 2.123 0 0 0-.611 1.878l.882 5.14a.53.53 0 0 1-.771.56l-4.618-2.428a2.122 2.122 0 0 0-1.973 0L6.396 21.01a.53.53 0 0 1-.77-.56l.881-5.139a2.122 2.122 0 0 0-.611-1.879L2.16 9.795a.53.53 0 0 1 .294-.906l5.165-.755a2.122 2.122 0 0 0 1.597-1.16z"
                      />
                    </svg>
                  </div>
                </div>
                <div
                  class="flex flex-wrap gap-1.5 mb-2.5"
                  data-testid="categories"
                >
                  <span
                    class="text-xs px-2 py-0.5 bg-gradient-to-r from-slate-100 to-slate-50 text-slate-700 rounded-md font-medium border border-slate-200/50"
                  >
                    category 0
                  </span>
                  <span
                    class="text-xs px-2 py-0.5 bg-gradient-to-r from-slate-100 to-slate-50 text-slate-700 rounded-md font-medium border border-slate-200/50"
                  >
                    category 1
                  </span>
                  <span
                    class="text-xs px-2 py-0.5 text-slate-500 font-medium"
                  >
                    +
                    1
                     mehr
                  </span>
                </div>
                <div
                  class="flex justify-end items-center gap-2.5 text-xs text-slate-500"
                >
                  <span
                    class="inline-flex items-center gap-1.5 truncate"
                  >
                    <svg
                      aria-hidden="true"
                      class="lucide lucide-clock w-3.5 h-3.5 flex-shrink-0 text-slate-400"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M12 6v6l4 2"
                      />
                      <circle
                        cx="12"
                        cy="12"
                        r="10"
                      />
                    </svg>
                    <span
                      class="font-medium"
                    >
                      Sa., 27. Sept. 2025
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </a>
        <a
          data-testid="mock-link"
          href="/prompts/334db648-f300-4284-8149-075ff465d752"
        >
          <div
            class="group relative rounded-lg cursor-pointer transition-all duration-200 border bg-white border-slate-200/60 hover:border-slate-300 hover:shadow-md"
            data-testid="prompt-list-item"
          >
            <div
              class="flex items-start gap-3 px-4 py-3.5"
            >
              <div
                class="flex-1 min-w-0"
              >
                <div
                  class="flex items-center gap-2 mb-2"
                >
                  <h3
                    class="font-semibold text-sm text-slate-900 truncate flex-1 group-hover:text-blue-700 transition-colors"
                  >
                    title 2
                  </h3>
                  <div
                    data-testid="is-favorite"
                  >
                    <svg
                      aria-hidden="true"
                      class="lucide lucide-star w-4 h-4 transition-all fill-yellow-400 text-yellow-500 scale-110"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M11.525 2.295a.53.53 0 0 1 .95 0l2.31 4.679a2.123 2.123 0 0 0 1.595 1.16l5.166.756a.53.53 0 0 1 .294.904l-3.736 3.638a2.123 2.123 0 0 0-.611 1.878l.882 5.14a.53.53 0 0 1-.771.56l-4.618-2.428a2.122 2.122 0 0 0-1.973 0L6.396 21.01a.53.53 0 0 1-.77-.56l.881-5.139a2.122 2.122 0 0 0-.611-1.879L2.16 9.795a.53.53 0 0 1 .294-.906l5.165-.755a2.122 2.122 0 0 0 1.597-1.16z"
                      />
                    </svg>
                  </div>
                </div>
                <div
                  class="flex flex-wrap gap-1.5 mb-2.5"
                  data-testid="categories"
                >
                  <span
                    class="text-xs px-2 py-0.5 bg-gradient-to-r from-slate-100 to-slate-50 text-slate-700 rounded-md font-medium border border-slate-200/50"
                  >
                    category 0
                  </span>
                  <span
                    class="text-xs px-2 py-0.5 bg-gradient-to-r from-slate-100 to-slate-50 text-slate-700 rounded-md font-medium border border-slate-200/50"
                  >
                    category 1
                  </span>
                  <span
                    class="text-xs px-2 py-0.5 text-slate-500 font-medium"
                  >
                    +
                    1
                     mehr
                  </span>
                </div>
                <div
                  class="flex justify-end items-center gap-2.5 text-xs text-slate-500"
                >
                  <span
                    class="inline-flex items-center gap-1.5 truncate"
                  >
                    <svg
                      aria-hidden="true"
                      class="lucide lucide-clock w-3.5 h-3.5 flex-shrink-0 text-slate-400"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M12 6v6l4 2"
                      />
                      <circle
                        cx="12"
                        cy="12"
                        r="10"
                      />
                    </svg>
                    <span
                      class="font-medium"
                    >
                      Sa., 27. Sept. 2025
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </a>
      </div>
      <div
        class="flex justify-center py-6"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-loader-circle h-6 w-6 animate-spin text-blue-500"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M21 12a9 9 0 1 1-6.219-8.56"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`PromptsList rendering tests PromptsList - list items empty - rendered test 1`] = `
<div>
  <div
    class="flex h-full flex-col bg-white"
    data-testid="prompts-list"
  >
    <div
      class="sticky top-0 z-10 flex items-center justify-between border-b border-slate-200/80 bg-gradient-to-r from-white to-slate-50/50 px-3 py-2 backdrop-blur-sm"
      data-testid="prompts-list-header"
    >
      <button
        class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-xs hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 h-8 rounded-md gap-1.5 px-3 has-[>svg]:px-2.5 relative transition-all duration-200 hover:bg-slate-50"
        data-slot="button"
        data-testid="filters-btn"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-funnel mr-2 h-4 w-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10 20a1 1 0 0 0 .553.895l2 1A1 1 0 0 0 14 21v-7a2 2 0 0 1 .517-1.341L21.74 4.67A1 1 0 0 0 21 3H3a1 1 0 0 0-.742 1.67l7.225 7.989A2 2 0 0 1 10 14z"
          />
        </svg>
        <span
          class="text-sm font-medium"
        >
          Filter
        </span>
      </button>
      <a
        class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive hover:bg-primary/90 h-8 rounded-md gap-1.5 px-3 has-[>svg]:px-2.5 bg-gradient-to-r from-blue-600 to-blue-700 text-white shadow-md transition-all duration-200 hover:from-blue-700 hover:to-blue-800 hover:shadow-lg flex items-center gap-2"
        data-slot="button"
        data-testid="create-prompt-btn"
        href="/prompts/new"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-plus h-4 w-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5 12h14"
          />
          <path
            d="M12 5v14"
          />
        </svg>
        <span
          class="text-sm font-medium"
        >
          Neu
        </span>
      </a>
    </div>
    <div
      class="flex-1 flex items-center justify-center p-8"
      data-testid="prompt-list-items-empty"
    >
      <div
        class="text-center max-w-md"
      >
        <div
          class="inline-flex items-center justify-center w-16 h-16 rounded-full bg-slate-100 mb-4"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-file-text w-8 h-8 text-slate-400"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6 22a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h8a2.4 2.4 0 0 1 1.704.706l3.588 3.588A2.4 2.4 0 0 1 20 8v12a2 2 0 0 1-2 2z"
            />
            <path
              d="M14 2v5a1 1 0 0 0 1 1h5"
            />
            <path
              d="M10 9H8"
            />
            <path
              d="M16 13H8"
            />
            <path
              d="M16 17H8"
            />
          </svg>
        </div>
        <h3
          class="text-lg font-semibold text-slate-700 mb-2"
        >
          Keine Prompts gefunden
        </h3>
        <p
          class="text-sm text-slate-500 mb-6"
        >
          Beginnen Sie, indem Sie Ihren ersten Prompt erstellen.
        </p>
        <a
          class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive hover:bg-primary/90 h-9 px-4 py-2 has-[>svg]:px-3 bg-gradient-to-r from-blue-600 to-blue-700 hover:from-blue-700 hover:to-blue-800 text-white shadow-md hover:shadow-lg transition-all duration-200 flex items-center gap-2"
          data-slot="button"
          data-testid="mock-link"
          href="/prompts/new"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-plus w-4 h-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5 12h14"
            />
            <path
              d="M12 5v14"
            />
          </svg>
          <span>
            Prompt erstellen
          </span>
        </a>
      </div>
    </div>
  </div>
</div>
`;
